k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocketbase
  namespace: pocketbase
spec:
  serviceName: pocketbase-headless-svc
  replicas: 2
  selector:
    matchLabels:
      app: pocketbase
  template:
    metadata:
      labels:
        app: pocketbase
    spec:
      serviceAccountName: pocketbase  # Ensure this matches the RoleBinding
      containers:
        - name: pocketbase
          image: registry.relentlessapproach.com/nisimasacode/pocketbase_marmot:1.0.2 #replace with image created with Dockerfile
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          #imagePullPolicy: Always
          ports:
            - containerPort: 8090
              name: pocketbase
            - containerPort: 4221
              name: marmot
          volumeMounts:
            - name: marmot-test
              mountPath: /pb/pb_data #adjust to Dockerfile
      imagePullSecrets:
        - name: regcred-pocketbase #create pull secret in namespace and insert here if necessary
  volumeClaimTemplates: #can be any type of k8s PVC
    - metadata:
        name: marmot-test
        namespace: pocketbase
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
        storageClassName: linode-block-storage
