k8s/headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase-headless-svc
  namespace: pocketbase
spec:
  clusterIP: None
  selector:
    app: pocketbase
